--- a/index.html
+++ b/index.html
@@ -1,205 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
 
-    <!-- Bootstrap -->
+  <head>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-
-    <style>
-
-            html *,
-            *:before,
-            *:after {
-              box-sizing: border-box;
-              -webkit-transition: 0.5s ease-in-out;
-              transition: 0.5s ease-in-out;
-            }
-
-            .swipe {
-                cursor: pointer;
-                position: relative;
-                display: block;
-                border: 1px solid currentColor;
-                color: rgb(132, 175, 27);
-            }
-            .swipe:before {
-              content: '';
-              position: absolute;
-              top: 0;
-              right: -2.5rem;
-              bottom: 0;
-              left: 0;
-              border-right: 2.5rem solid transparent;
-              border-bottom: 2.5rem solid rgb(132, 175, 27);
-              -webkit-transform: translateX(-100%);
-                      transform: translateX(-100%);
-            }
-            .swipe:hover {
-              color: rgb(255, 255, 255);
-            }
-            .swipe:hover:before {
-              -webkit-transform: translateX(0);
-                      transform: translateX(0);
-            }
-
-
-
-        body {
-            background: rgb(238, 238, 238);
-        }
-
-        .item  .left{
-            position : absolute;
-            width :50px;
-            height : 150px;
-            color : white ;
-            text-align: center;
-            font-size: 2rem;
-            padding-top: 10px ;
-
-            background-color: rgb(132, 175, 27);
-
-        }
-        .item header {
-            width : 100% ;
-            position : relative ;
-        }
-        .item header .star  {
-            display : inline;
-            position : absolute ;
-            right : 0     ;
-            top : 0 ;
-            text-align: center ;
-            overflow : hidden ;
-            line-height: 2.5rem ;
-            min-width : 2.5rem ;
-            background : rgb(218, 218, 218);
-            /*background : rgb(132, 175, 27);*/
-            color : white ;
-        }
-        .items {
-            margin : 0 -20px ;
-            display: flex ;
-            flex-wrap: wrap;
-        }
-
-
-        .item {
-
-            position : relative;
-            width : calc(50% - 40px);
-            background: rgb(255, 255, 255);
-            /*border : 10px solid rgb(221, 221, 221);*/
-            margin : 20px ;
-            overflow: hidden;
-            display: flex ;
-            flex-wrap: wrap;
-            padding : 20px ;
-            /*border-left : 50px solid rgb(218, 218, 218);*/
-            border-left : 50px solid rgb(132, 175, 27);
-            box-shadow: 3px 1px 3px rgb(198, 198, 198);
-        }
-        .item dl {
-            vertical-align: text-top;
-            width : 100% ;
-            margin-bottom: 0;
-        }
-        .item dl * {
-            line-height: 2rem ;
-        }
-        .item dl dt {
-            vertical-align : text-top;
-            display: inline-block ;
-            font-size : 1rem ;
-            width : 2.5rem ;
-            text-align: right;
-            padding-right: .5rem;
-            color : rgb(199, 199, 199);
-        }
-        .item dl dd {
-            vertical-align : text-top;
-            display: inline-block ;
-            width : calc(100% - 3rem);
-
-        }
-
-        .item > .detail {
-            display: flex;
-            flex-wrap: wrap;
-            width: 100%;
-        }
-        .item > .detail > div {
-
-            width :25% ;
-        }
-        .item h1 {
-            font-size :1.5rem;
-            line-height: 2rem ;
-            padding-right: 2.5rem;
-            color : rgb(132, 175, 27);
-            margin : 0 ;
-            margin-bottom : 10px;
-        }
-        nav{
-            width : 80% ;
-            margin: 30px 0 ;
-            color : rgb(147, 147, 147);
-            font-size: 2rem;
-            /*display: flex ;
-            flex-wrap: wrap;*/
-        }
-        .wrapper {
-            padding: 20px;
-        }
-
-
-    </style>
-
-
-
+    <link rel="stylesheet" href="./style.css">
   </head>
+
   <body >
     <div id="app">
+
         <nav class="container">
-            <div class="row">
-                <div class="wrapper">
 
-                    <p class="pull-left">獨立音樂活動清單</p>
-
-                    <div class="pull-right">
-                        <span class="glyphicon glyphicon-star"></span>
-                        <span class="glyphicon glyphicon-time"></span>
-                    </div>
-                </div>
-
+            <p class="pull-left">獨立音樂活動清單</p>
+            <div class="pull-right">
+                <span class="glyphicon glyphicon-th-large" @click="filter('all')"></span>
+                <span class="glyphicon glyphicon-star" @click="filter('star')"></span>
+                <span>|</span>
+                <span class="glyphicon glyphicon-time" @click="sort('time')"></span>
+                <input type="text" @keyup="filter('search')" v-model="search">
             </div>
-
         </nav>
-        <div class="container">
+
+        <main class="container">
             <div class="items">
-                <article class="item" v-for="s in json">
+                <article class="item" v-for="s in current">
+
                     <header>
                         <h1>{{s.title}}</h1>
-                        <div class="swipe star">
+                        <div :class="'swipe star ' + (favorate[s.UID] ? 'true':'') " @click="select(s)">
                           <span class="glyphicon glyphicon-star"></span>
                         </div>
                     </header>
+
                     <dl>
                         <dt>時間</dt>
                         <dd>{{s.showInfo[0].time}}</dd>
-                        </dl>
-                        <dl>
+                    </dl>
+
+                    <dl>
                         <dt>價錢</dt>
                         <dd>{{s.showInfo[0].price.substring(0,10)}}</dd>
-                        </dl>
-                        <dl>
+                    </dl>
+
+                    <dl>
                         <dt>地點</dt>
                         <dd>{{s.showInfo[0].location}}</dd>
                     </dl>
+
                 </article>
-            </div>
-        </div>
+            </div
+            <footer class="container">
+                <span v-if="current && current.length ">{{total}}</span >
+                <span v-else>目前還沒有資料。</span >
+
+            </footer>
+        </main>
     </div>
 
 
@@ -212,19 +68,70 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vue/2.2.6/vue.js"></script>
     <script>
+
         $.getJSON("./show.json",function(json){
             console.log(json)
-            var app = new Vue({
+            json.forEach(function(s){
+                s.selected = false
+            })
+            window.app = new Vue({
                 el : "#app",
                 data : {
-                    json
+                    all : json ,
+                    current  : json.slice() ,
+                    favorate : {}
+                    // search : ""
+                },
+                methods : {
+                    select : function (s){
+                        this.$set(this.favorate, s.UID , this.favorate[s.UID] ?  false : true )
+                        console.log(this.favorate)
+
+                    },
+
+                    filter : function(option){
+                        var vm = this
+                        switch (option){
+                            case "star" :
+                                vm.current = vm.all.filter(function(s){
+                                    return vm.favorate[s.UID]
+                                })
+                                break ;
+                            case "all" :
+                                vm.current = vm.all.slice()
+                                break ;
+                            case "search" :
+                                vm.current = vm.all.filter(function(s){
+                                    console.log("s.title",s.title,vm.search,s.title.toLowerCase().indexOf(vm.search))
+                                    return s.title.toLowerCase().indexOf(vm.search) > 0
+                                })
+                                console.log("search")
+                                break ;
+                        }
+                    },
+                    sort : function (option){
+                        var vm = this
+                        switch (option){
+                            case "time" :
+                                vm.$set(vm , "current" , vm.current.sort(function(a,b){
+                                    return b.showInfo[0].time.localeCompare(a.showInfo[0].time )
+                                })
+                                )
+                                console.log("a")
+                        }
+                    }
+                },
+                computed : {
+                    total : function (){
+                        return this.current.reduce(function (v,s){
+                            var p = parseInt(s.showInfo[0].price)
+                            console.log(p)
+                            return v + (!isNaN(p) ? p : 0 )
+                        },0)
+                    }
                 }
             })
-
         })
-
-
-
     </script>
 
   </body>
