--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <nav class="container">
             <h1 class="pull-left">獨立音樂活動清單</h1>
 
-            <div class="pull-left">
+            <div class="pull-left tabs">
                 <!-- 不同的分頁 -->
                 <span class="glyphicon glyphicon-th-large" @click="control.tab = 'all' "></span>
                 <span class="glyphicon glyphicon-star"     @click="control.tab = 'star' "></span>
@@ -32,7 +32,7 @@
 
                     <header>
                         <h1>{{s.title}}</h1>
-                        <div class="animation-swipe star" :class="{ favorite : favorate[s.uid] } " @click="toggle_like(s)">
+                        <div class="animation-swipe star" :class="{ favorite : favorite[s.uid] } " @click="toggle_like(s)">
                           <span class="glyphicon glyphicon-star"></span>
                         </div>
                     </header>
@@ -77,25 +77,25 @@
                 el : "#app",
                 data : {
                     activities : json ,
-                    favorate : {},
+                    favorite : {},
                     control : {
                         filter : "" ,
                         sort : "" ,
-                        tab : "" ,
+                        tab : "all" ,
                     }
                 },
                 methods : {
                     toggle_like : function (s){
-                        this.$set(this.favorate, s.uid , this.favorate[s.uid] ?  false : true )
-                        console.log(this.favorate)
+                        this.$set(this.favorite, s.uid , this.favorite[s.uid] ?  false : true )
+                        console.log(this.favorite)
                     }
                 },
                 computed : {
                     total : function (){
 
-                        var sum
+                        var sum = 0
                         for (var i = 0 ; i < this.current_activities.length ; i++)
-                            sum += this.current_activities[i]
+                            sum += this.current_activities[i].price
                         return sum
 
                         // return this.current_activities.reduce(function (v,s){
@@ -115,14 +115,14 @@
                                 break
                             case "star" :
                                 current = vm.activities.filter(function(s){
-                                    return vm.favorate[s.uid]
+                                    return vm.favorite[s.uid]
                                 })
                         }
 
                         // Filter
                         if (vm.control.filter && vm.control.filter.length > 0 ){
                             current = current.filter(function(s){
-                                var search = vm.control.search.toLowerCase()
+                                var search = vm.control.filter.toLowerCase()
                                 var title = s.title.toLowerCase()
                                 return title.indexOf(search) > -1
                             })
