--- a/index.html
+++ b/index.html
@@ -14,42 +14,42 @@
 
             <div class="pull-left tabs">
                 <!-- 不同的分頁 -->
-                <span class="glyphicon glyphicon-th-large" @click="control.tab = 'all' "></span>
-                <span class="glyphicon glyphicon-star"     @click="control.tab = 'star' "></span>
+                <span class="glyphicon glyphicon-th-large" ></span>
+                <span class="glyphicon glyphicon-star"     ></span>
             </div>
 
             <div class="pull-right">
                 <!-- 不同的過濾器 -->
-                <span class="glyphicon glyphicon-time"     @click="control.sort   = 'time' "></span>
-                <span class="glyphicon glyphicon-tag"      @click="control.sort   = 'price' "></span>
-                <input type="text" v-model="control.filter" placeholder="過濾器">
+                <span class="glyphicon glyphicon-time"     ></span>
+                <span class="glyphicon glyphicon-tag"      ></span>
+                <input type="text"  placeholder="過濾器">
             </div>
         </nav>
 
         <main class="container">
             <div class="items">
-                <article class="item" v-for="s in current_activities">
+                <article class="item" >
 
                     <header>
-                        <h1>{{s.title}}</h1>
-                        <div class="animation-swipe star" :class="{ favorite : favorite[s.uid] } " @click="toggle_like(s)">
+                        <h1>活動名</h1>
+                        <div class="animation-swipe star" >
                           <span class="glyphicon glyphicon-star"></span>
                         </div>
                     </header>
 
                     <dl>
                         <dt>時間</dt>
-                        <dd>{{s.time}}</dd>
+                        <dd>時間</dd>
                     </dl>
 
                     <dl>
                         <dt>價錢</dt>
-                        <dd>{{s.price}}</dd>
+                        <dd>價錢</dd>
                     </dl>
 
                     <dl>
                         <dt>地點</dt>
-                        <dd>{{s.address}}</dd>
+                        <dd>地點</dd>
                     </dl>
 
                 </article>
@@ -57,8 +57,8 @@
         </main>
 
         <footer class="container">
-            <span v-if="current_activities && current_activities.length ">{{total}}</span >
-            <span v-else>目前還沒有資料。</span >
+            <span >目前資料總價</span >
+            <span >目前還沒有資料。</span >
         </footer>
 
     </div>
@@ -76,73 +76,18 @@
             window.app = new Vue({
                 el : "#app",
                 data : {
-                    activities : json ,
-                    favorite : {},
-                    control : {
-                        filter : "" ,
-                        sort : "" ,
-                        tab : "all" ,
-                    }
                 },
                 methods : {
                     toggle_like : function (s){
-                        this.$set(this.favorite, s.uid , this.favorite[s.uid] ?  false : true )
-                        console.log(this.favorite)
+                        console.log(s)
                     }
                 },
                 computed : {
-                    total : function (){
-
-                        var sum = 0
-                        for (var i = 0 ; i < this.current_activities.length ; i++)
-                            sum += this.current_activities[i].price
-                        return sum
-
-                        // return this.current_activities.reduce(function (v,s){
-                        //     var p = parseInt(s.price)
-                        //     return v + p
-                        // },0)
-                    },
                     current_activities : function (){
 
-                        var vm = this
-                        var current = []
+                    },
 
-                        // Tab
-                        switch (vm.control.tab){
-                            case "all" :
-                                current = vm.activities
-                                break
-                            case "star" :
-                                current = vm.activities.filter(function(s){
-                                    return vm.favorite[s.uid]
-                                })
-                        }
-
-                        // Filter
-                        if (vm.control.filter && vm.control.filter.length > 0 ){
-                            current = current.filter(function(s){
-                                var search = vm.control.filter.toLowerCase()
-                                var title = s.title.toLowerCase()
-                                return title.indexOf(search) > -1
-                            })
-                        }
-
-                        // Sort
-                        switch (vm.control.sort){
-                            case "time" :
-                                current = current.sort(function(a,b){
-                                    return a.time.localeCompare(b.time )
-                                })
-                                break ;
-                            case "price" :
-                                current = current.sort(function(a,b){
-                                    return parseInt(a.price) - parseInt(b.price)
-                                })
-                                break ;
-                            default : break ;
-                        }
-                        return current
+                    total : function (){
                     }
                 }
             })
